--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -376,6 +376,7 @@ button.cancel-create-folder {
 .add-folder-wrapper > h4 {
     width: auto;
     margin-left: 5px;
+    font-size: 14px;
 }
 
     
