--- a/src/styles/toolbarHeader.css
+++ b/src/styles/toolbarHeader.css
@@ -59,38 +59,6 @@
     position: relative;
 }
 
-.is-added-tooltip {
-    visibility: hidden;
-    position: absolute;
-    z-index: 200;
-    
-    height: auto;
-    width: auto;
-    max-width: none;
-    text-align: center;
-
-    padding: 5px;
-    border-radius: 5px;
-
-    font-size: 12px;
-    white-space: nowrap;
-    color: white;
-
-    background-color: var(--darkGreen);
-    opacity: .4;
-    box-shadow: var(--defaultShadow);
-
-    transform: translate(-50%, 60%);
-    opacity: 0;
-    transition: opacity 0.2s;
-
-}
-
-.is-added-btn:hover .is-added-tooltip {
-    visibility: visible;
-    opacity: 1;
-}
-
 
 /* testing styles*/
 
@@ -99,6 +67,7 @@
     height: 38px;
     min-height: 38px;
     margin: 1rem 0;
+    padding: 0 10px;
 
     display: flex;
     flex-direction: row;
@@ -107,15 +76,16 @@
 }
 
 .selectcolor-container > select,
-.selectcolor-container > button {
+.selectcolor-container > button,
+.freestyle-container  > button {
     border: var(--border);
     background-color: var(--darkGrey);
     border-radius: 5px;
     color: white;
     font-size: 14px;
     font-weight: bolder;
-    padding: .5rem;
-    margin: 0 15px;  
+    padding: 6px;
+    height: 100%;
 }
 
 div.selectcolor-container > select {
@@ -123,7 +93,29 @@ div.selectcolor-container > select {
     margin-right: 0;
 }
 
-.selectcolor-container svg {
+.freestyle-container {
+    height: 100%;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+.freestyle-container > button {
+    margin-left: 5px;
+}
+.freestyle-container > svg {
+    align-self: center;
+}
+
+.tooltip a {
+    color: white;
+}
+.tooltip a:hover {
+    color: gray;
+}
+
+.selectcolor-container > svg {
     font-size: 12px;
     position: relative;
     right: 18px;
@@ -134,7 +126,8 @@ div.selectcolor-container > select {
     outline: none;
 }
 .selectcolor-container > button:hover,
-.selectcolor-container > select:hover {
+.selectcolor-container > select:hover,
+.freestyle-container  > button:hover {
     background-color: var(--hoverHighlightDarkGrey);
 }
 
@@ -146,13 +139,20 @@ div.selectcolor-container > select {
 }
 
 button.exit-test {
-    background-color: rgba(255,0,0,.5);
-    margin-left: 0;
+    margin-left: 10px;
+    background-color: var(--red);
+    border: 1px solid var(--lightRed);
+}
+  
+button.exit-test.red-btn:hover {
+background-color: rgba(255,0,0,.3);
+border: 1px solid var(--red);
 }
 
 button.begin-test {
     background-color: var(--green);
     margin: 0;
+    margin-right: auto;
 
 }
 
@@ -163,24 +163,20 @@ button.begin-test {
     align-items: center;
     width: auto;
     font-size: 16px;
-    margin-left: 10px;
-}
+    margin-right: auto;
 
-.selectcolor-container > button.skip-btn {
-    margin-left: auto;
 }
 
 .selectcolor-container span {
     font-weight: bolder;
+    margin-left: .5ch;
     font-size: 16px;
-    margin-left: 10px;
 }
 .selectcolor-container span.black {
     color: rgb(100,100,100);
 }
 
 button.shuffle-button {
-    margin-left: auto;
 }
 
 
